syntax = "proto3";

import "common.proto";

option java_package = "com.graduate.design.proto";
option java_outer_classname="FileUpload";
option go_package = "./pb_gen";


// 文件夹加密后上传
message UploadFileRequest{
    string fileName = 1; // 文件名称
    int64 parentId = 2; // 文件的父节点
    repeated indexToken indexList = 3; // 文件的关键词列表，用于后续可加密搜索
    bytes content = 4; // 文件内容
    string biIndex = 5; // 用户索引
    int64 nodeId = 6;  // 文件Id
    string fileSecret = 7; // 文件密钥
	
    BaseReq baseReq = 255;
}

message UploadFileReponse{

    BaseResp baseResp = 255;
}